Fixed media query and spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,25 +26,19 @@ p{
      margin-right: auto;
     
 }
-#results{
-   
-    
-}
+
 
  ul{
         padding: 0;
         margin-left: 1em;
         margin-right: 1em;
         //display: inline-block;
-   //     display: flex;
-     //   justify-content: center;
-       // flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
         list-style-type: none;
      
-     li{
-         float:left;
-         display: inline-block;
-        
+    
   
     .titles{
        
@@ -78,11 +72,11 @@ p{
         margin-left: 10px;
     }
     }
-    }
+    
 }
 
    footer{
-       clear: both;
+      
         p{
             font-size: .5em;
         }
@@ -101,13 +95,21 @@ p{
     
     .titles{
         h2{
-            font-size: 10em;
+          //  font-size: 10em;
         }
         h3{
-            font-size: 1.25em;
+          //  font-size: 1.25em;
         }
     }
-    li{
-        overflow: auto;
+     li{
+        padding: 5px;
     }
+}
+
+@media  (min-width:800px) {
+    
+    li{
+        padding: 10px;
+    }
+    
 }
